fixed too long advertiser name

--- a/src/styles/tiles.scss
+++ b/src/styles/tiles.scss
@@ -48,6 +48,14 @@
       color:#050C1C;
       font-family: "OpenSans-SemiBold", sans-serif;
       font-size: 14px;
+          display: inline-block;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: normal;
+    width: 160px;
       
     }
 
